--- a/promptvault/package.json
+++ b/promptvault/package.json
@@ -11,6 +11,8 @@
     "build:renderer": "tsc -p tsconfig.renderer.json && vite build",
     "build:electron": "tsc -p tsconfig.electron.json",
     "build": "npm run build:renderer && npm run build:electron",
+    "migrate": "tsc -p tsconfig.electron.json && electron dist/electron/run-migration.js",
+    "rebuild": "electron-rebuild",
     "pack": "npm run build && electron-builder --dir",
     "dist": "npm run build && electron-builder",
     "dist:win": "npm run build && electron-builder --win",
@@ -18,7 +20,9 @@
     "dist:linux": "npm run build && electron-builder --linux"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.93.3",
     "better-sqlite3": "^11.5.0",
+    "dotenv": "^17.2.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
